Remove container-aware JVM lab