@@ -4,7 +4,6 @@ This track covers:
 
 - Low-latency GC (ZGC / Shenandoah)
 - Deep JFR profiling
-- JVM behavior under local resource limits
 
 ---
 
@@ -12,7 +11,6 @@ This track covers:
 
 1. **A1_low_latency_gc** – Compare ZGC vs G1 pause behavior
 2. **A2_jfr_profiling** – JFR-based profiling of a service
-3. **A3_container_aware_jvm** – JVM resource limits on a local host
 
 ---
 
@@ -70,32 +68,3 @@ Open `myapp.jfr` in **Java Mission Control** and inspect:
 
 ---
 
-## Lab A3 – JVM Resource Limits on a Local Host
-
-**Folder:** `A3_container_aware_jvm/`
-**File:** `MyContainerApp.java`
-
-### Run with Local Limits and Capture Evidence (outputs to repo root)
-
-```bash
-javac advanced/A3_container_aware_jvm/MyContainerApp.java
-
-java -Xms512m -Xmx512m \
-     -XX:ActiveProcessorCount=2 \
-     -XX:StartFlightRecording=filename=advanced-a3.jfr,dumponexit=true,settings=profile \
-     -Xlog:gc*:file=advanced-a3-gc.log:uptime,time,level,tags \
-     -XX:+HeapDumpOnOutOfMemoryError \
-     -XshowSettings:vm \
-     -cp advanced/A3_container_aware_jvm \
-     MyContainerApp
-```
-
-> **Troubleshooting – missing `advanced-a3.jfr` or `advanced-a3-gc.log`:** both
-> artifacts are written to the repository root (the same location used by the
-> other labs). If the files are absent, make sure the JVM has write permissions
-> in that folder and re-run the command. The app prints verbose diagnostics
-> about the resolved paths so you can verify where the evidence should appear.
-
-Observe heap sizing, CPU accounting via `-XX:ActiveProcessorCount`, and verbose
-GC/JFR evidence. The JFR/GC artifacts land in the repository root for analysis
-with the JVM Health Analyzer.
